Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -247,9 +247,7 @@
 <li>
 <a href="https://github.com/TheRealMihir">TheRealMihir</a> started and maintains the project.</li>
 <li>The graphics (note, info icon, buttons, arrow) are from <a href="http://premiumpixels.com">Premium Pixels</a>.</li>
-</ul><p>I've included all the graphics in the "graphics" folder. I'm on a Mac and I use <a href="http://pixelmator.com">Pixelmator</a> for graphic editing - the images are <code>.pxm</code> files.</p>
-
-<p>At the time of writing this, the license for graphics from Premium Pixels is:</p>
+</ul><p>At the time of writing this, the license for graphics from Premium Pixels is:</p>
 
 <pre><code>All resources made available on Premium Pixels, including but not limited to, icons, images, brushes, shapes, layer styles, layered PSD’s, patterns, textures, web elements and themes are free for use in both personal and commercial projects.
 
@@ -260,7 +258,9 @@ You may freely use my resources, without restriction, in software programs, web 
 
 <ul>
 <li>The icon is from <a href="http://www.psdgraphics.com/">PSD Graphics</a>. </li>
-</ul><p>To use the icon commercially, you must pay for a commercial license <a href="http://www.psdgraphics.com/commercial-use/">here</a>. I have already purchased a license.</p>
+</ul><p>I've included all the icon in the "graphics" folder. I'm on a Mac and I use <a href="http://pixelmator.com">Pixelmator</a> for graphic editing - the icon is a <code>.pxm</code> file.</p>
+
+<p>To use the icon commercially, you must pay for a commercial license <a href="http://www.psdgraphics.com/commercial-use/">here</a>. I have already purchased a license.</p>
 
 <h1>Contribute</h1>
 
